--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
