--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-show-more-text": "^1.4.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
